# quill

./: ._README.md  .gitignore  CMakeLists.txt  LICENSE  README.md
qml/: Main.qml  ReaderView.qml  Toolbar.qml  qml.qrc
src/: main.cpp  pageimageproviderplugin.cpp  pageimageproviderplugin.h  pdfrenderer.cpp  pdfrenderer.h
